--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:7777/Protese
 spring.datasource.username=postgres
 spring.datasource.password=123
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+server.servlet.context-path=/protese
